# ESP32S3-PyController-cpp-Video

./: CMakeLists.txt  partitions.csv  platformio.ini
.github/workflows/: build-cpp.yml
main/: CMakeLists.txt  espnow_handler.cpp  espnow_handler.hpp  gamepad.cpp  gamepad.hpp  lcd.cpp  lcd.h  lcd.hpp  main.cpp  tjpgd.c  tjpgd.h
src/: main.cpp
